# learning_program

./: README.md
cpp/Basic_cpp/: CMakeLists.txt
cpp/Basic_cpp/0.problems/GeeksForgeeeks/: 1.cpp  3.cpp  7.cpp  8.cpp  9.cpp
cpp/Basic_cpp/0.problems/GeeksForgeeeks/output/: 1  2  3  4
cpp/Basic_cpp/1.variables/: 1.cpp  2.cpp  4.cpp  5.cpp  6.cpp
cpp/Basic_cpp/1.variables/output/: 1  5  6  7  8  9
cpp/Basic_cpp/1.variables/output/1.dSYM/Contents/Resources/DWARF/: 1
cpp/Basic_cpp/1.variables/output/5.dSYM/Contents/Resources/DWARF/: 5
cpp/Basic_cpp/1.variables/output/6.dSYM/Contents/Resources/DWARF/: 6
cpp/Basic_cpp/1.variables/output/7.dSYM/Contents/Resources/DWARF/: 7
cpp/Basic_cpp/10.oop/: 1.cpp
cpp/Basic_cpp/10.oop/output/: 1
cpp/Basic_cpp/10.oop/output/1.dSYM/Contents/Resources/DWARF/: 1
cpp/Basic_cpp/2.arithmetic_operators/: 1.cpp
cpp/Basic_cpp/2.arithmetic_operators/output/: 1
cpp/Basic_cpp/2.arithmetic_operators/output/1.dSYM/Contents/Resources/DWARF/: 1
cpp/Basic_cpp/5.loop/: 1.cpp
cpp/Basic_cpp/6.pointers/: 1.cpp  2.cpp
cpp/Basic_cpp/6.pointers/output/: 1  2
cpp/Basic_cpp/6.pointers/output/1.dSYM/Contents/Resources/DWARF/: 1
cpp/Basic_cpp/7.references/: 1.cpp
cpp/Basic_cpp/7.references/output/: 1
cpp/Basic_cpp/8.functions/: 1.cpp  2.CPP  3_0.cpp
cpp/Basic_cpp/8.functions/output/: 2  3
cpp/Basic_cpp/9.array/: 1.cpp  2.cpp  3.cpp  4.cpp
cpp/Basic_cpp/9.array/output/: 1  2  3  4
cpp/Basic_cpp/Function/: 1
cpp/Basic_cpp/Function/output/: 1
cpp/Basic_cpp/array_string/: 1  1.cpp
cpp/Basic_cpp/array_string/output/: 1
(+56 files in other folders)
